# quizhub

./: .env.example  .gitignore  docker-compose.yml
.github/workflows/: deploy.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 33b3aa7bc4ca_add_game_sessions_table.py  af6c760aa104_initial_tables.py  f486ba1d39f3_add_game_sessions_table.py
backend/app/: config.py  database.py  main.py
backend/app/core/: deps.py  game_manager.py  redis.py  room_code_generator.py  security.py  ws_manager.py
backend/app/models/: __init__.py  collection.py  game_session.py  option.py  question.py  room.py  user.py
backend/app/routers/: auth.py  collections.py  game.py  game_history.py  leaderboard.py  questions.py  rooms.py
backend/app/schemas/: auth.py  collection.py  game.py  question.py  room.py
backend/app/workers/: game_saver.py
frontend/: vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/api/: axios.js
frontend/src/components/: Navbar.jsx  ProtectedRoute.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/hooks/: useWebSocket.js
frontend/src/pages/: Collections.jsx  Dashboard.jsx  HostGame.jsx  JoinGame.jsx  Landing.jsx  Login.jsx  PlayGame.jsx  Questions.jsx  Register.jsx  Results.jsx
nginx/: nginx.conf
static/: ws_test.html
