[project]
name = "quizhub"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.29.0",
    "sqlalchemy==2.0.36",
    "alembic==1.13.3",
    "asyncpg==0.30.0",
    "greenlet==3.1.1",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.12",
    "redis==5.2.0",
    "python-dotenv==1.0.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]